--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="../styles.css">
   <title>Document</title>
 </head>
-<body class="div-container">
+<body class="container">
+  <h1>Weather App</h1>
   <form action="" method="POST" class="input-group col-lg-3">
     <input required type="text" name="city" class="form-control" placeholder="City name...">
     <span class="input-group-btn">
